--- a/Assets/UI/Pause menu.uxml
+++ b/Assets/UI/Pause menu.uxml
@@ -1,9 +1,11 @@
-<?xml version="1.0" encoding="utf-8"?>
-<engine:UXML
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-    xmlns:engine="UnityEngine.UIElements"
-    xmlns:editor="UnityEditor.UIElements"
-    xsi:noNamespaceSchemaLocation="../../UIElementsSchema/UIElements.xsd"
->
-    
-</engine:UXML>
+<ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" xsi="http://www.w3.org/2001/XMLSchema-instance" engine="UnityEngine.UIElements" editor="UnityEditor.UIElements" noNamespaceSchemaLocation="../../UIElementsSchema/UIElements.xsd" editor-extension-mode="False">
+    <Style src="project://database/Assets/UI/Style%20sheets/Styles.uss?fileID=7433441132597879392&amp;guid=ee4b2c8d9220537499ff57b1f8678e67&amp;type=3#Styles" />
+    <ui:VisualElement name="Base" style="flex-grow: 1; background-color: rgba(0, 0, 0, 0); align-items: center; justify-content: flex-start; align-self: auto;">
+        <ui:Label tabindex="-1" text="Game paused" display-tooltip-when-elided="true" name="Menu-header" class="menu-header" style="font-size: 96px;" />
+        <ui:VisualElement name="Buttons-container" style="flex-grow: 1; background-color: rgba(0, 0, 0, 0); width: 40%; align-items: stretch; margin-top: 0; justify-content: center;">
+            <ui:Button text="Resume" display-tooltip-when-elided="true" name="Resume-button" class="menu-button" style="font-size: 48px;" />
+            <ui:Button text="Settings" display-tooltip-when-elided="true" name="Settings-button" class="menu-button" style="font-size: 48px;" />
+            <ui:Button text="Quit level" display-tooltip-when-elided="true" name="Quit-level-button" class="menu-button" style="font-size: 48px;" />
+        </ui:VisualElement>
+    </ui:VisualElement>
+</ui:UXML>
